# logging-driver

./: .gitignore  Cargo.toml  README.md  logging_driver.inx  vscode.json
.github/workflows/: build.yml  doc.yml  lint.yml
common/: Cargo.toml
common/src/: ioctl.rs  lib.rs  types.rs
kernel/: Cargo.toml  logging_driver.inx
kernel/src/: config.rs  displayer.rs  error.rs  lib.rs  log.rs  state.rs
kernel/src/handlers/: driver_entry.rs  driver_unload.rs  irp_handler.rs  mod.rs  process_notify.rs  thread_notify.rs
kernel/src/handlers/irp/: cleanup.rs  close.rs  create.rs  mod.rs
kernel/src/handlers/irp/ioctl/: memory_cleanup.rs  memory_init.rs  memory_initialize.rs  mod.rs
kernel/src/wrappers/: irql.rs  mod.rs  mutex.rs  safety.rs
scripts/: build.bat  setup.bat
src/: display.rs  displayer.rs  error.rs  lib.rs  log.rs  unicode.rs
src/wrappers/: lifetime.rs  mod.rs  phantom.rs  safety.rs  strings.rs
user/: Cargo.toml
user/src/: cli.rs  config.rs  main.rs
user/src/handlers/: mod.rs  poll.rs  stream.rs
