[package]
name = "logging-driver"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2024"
description = ""

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-panic = "0.3.1"
wdk-sys = "0.4.0"

[build-dependencies]
wdk-build = "0.4.0"

[profile.dev]
panic = "abort"
lto = "thin"

[profile.release]
codegen-units = 1
debug = 0
lto = "thin"
opt-level = 3
overflow-checks = false
panic = "abort"
strip = true
