[package]
name = "common"
description = "Shared library between kernel and user mode"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
postcard = { workspace = true }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }

[lints]
workspace = true
