[package]
name = "logging-driver"
description = "A super simple WDM driver"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
ouroboros = "0.18.5"
serde_json = { workspace = true }
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-panic = "0.3.1"
wdk-sys = "0.4.0"

[build-dependencies]
wdk-build = "0.4.0"

[lints]
workspace = true
