[package]
name = "user"
description = "User-mode application"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.49", features = ["cargo", "derive"] }
common = { path = "../common" }
postcard = { version = "1.1.3", features = ["alloc"] }
tokio = { version = "1.48.0", features = ["full"] }

[lints]
workspace = true
