[package]
name = "user"
description = "User-mode application"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.49", features = ["cargo", "derive"] }
common = { path = "../common" }
postcard = { version = "1.1.3", features = ["alloc"] }
tokio = { version = "1.48.0", features = ["full"] }
windows = { version = "^0.61.3", features = ["Win32", "Win32_Security", "Win32_System", "Win32_System_IO", "Win32_System_Memory", "Win32_System_Threading"] }

[lints]
workspace = true
